--- a/app/assets/stylesheets/components/_institution_card.scss
+++ b/app/assets/stylesheets/components/_institution_card.scss
@@ -8,7 +8,6 @@
   justify-content: center;
   align-items: center;
   color: white;
-
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 
@@ -18,39 +17,36 @@
 
 .institution-card h1 {
   font-family: 'Roboto', sans-serif;
-  font-size: 36px;
+  font-size: 26px;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-align: center;
+  padding: 3px;
 
 
 }
 
 .content-background {
   background-color: #e7e4e4;
-  width: 50%;
+  width: 90%;
   height: 150%;
   border-radius: 6px;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
   align-items: center;
-  margin: 75px auto;
+  margin: 75px 6%;
   margin-bottom: 30px;
   object-fit: cover;
   position: relative;
+  margin-top: 100px;
 
 }
 
-
-@include media-breakpoint-up(md) {
 .show-card-text {
   margin-top: 30px;
   text-align: left;
   padding: 10px;
-  // margin-bottom: 80px;
-  margin: 70px 50px;
+  margin: 70px 5px;
   }
-}
+
 .btn-info {
   position: absolute;
   right: 18px;
@@ -61,7 +57,7 @@
 .heart-icon {
   position: absolute;
   top: 285px;
-  right: 22px;
+  right: 24px;
   font-size: 25px;
   cursor: pointer;
   &:hover {
@@ -80,27 +76,32 @@
 
 .infos-name h2 {
   font-family: 'Roboto', sans-serif;
-  font-size: 28px;
+  font-size: 22px;
   color: #4d4d4d;
   font-weight: bold;
+  align-text: center;
 
 }
 .infos-name h3 {
   font-family: 'Roboto', sans-serif;
-  font-size: 24px;
+  font-size: 18px;
   color: #4d4d4d;
+  font-weight: lighter;
+  opacity: 0.7;
 
 }
 .infos-name h4 {
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
+  font-size: 14px;
   color: #4d4d4d;
-
+  font-weight: lighter;
+  opacity: 0.7;
 }
 .infos-name p {
   font-family: 'Roboto', sans-serif;
-  font-size: 18px;
+  font-size: 13px;
   color: #4d4d4d;
+  font-weight: lighter;
 
 }
 
@@ -113,18 +114,19 @@
 
 .application ul li {
   display: inline;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  color: #4d4d4d;
+  opacity: 0.7;
 }
 
 
-// #eae7e7
-
 .description {
-  margin: 70px 30px;
-  // overflow: scroll;
-
+  margin: 40px 2px;
   text-align: justify;
   font-family: 'Roboto', sans-serif;
-  font-size: 18px;
+  font-size: 12px;
+  font-weight: lighter;
 
 }
 
@@ -133,28 +135,163 @@
   flex-direction: column;
   align-items: center;
   position:relative;
+  margin: 100px, 12%;
 }
 
 .btn-back {
-  // position: absolute;
-  // bottom: 70px;
-  // left: 382px;
-
-
-
-
-  width: 50%;
-  // height: 150%;
-  // border-radius: 6px;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // align-items: center;
-  // margin: 50px auto;
+  width: 90%;
   margin-bottom: 100px;
-  // object-fit: cover;
-  // position: relative;
+
 }
 
 
-// #eae9e9
+@include media-breakpoint-up(lg) {
+
+  .institution-card {
+  background-size: cover;
+  background-position: center;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+
+
+
+}
+
+.institution-card h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-align: center;
+
+
+}
+
+.content-background {
+  background-color: #e7e4e4;
+  width: 57%;
+  height: 150%;
+  border-radius: 6px;
+  align-items: center;
+  margin: 75px 8%;
+  margin-bottom: 30px;
+  object-fit: cover;
+  position: relative;
+  margin-top: 100px;
+
+}
+.show-card-text {
+  margin-top: 30px;
+  text-align: left;
+  padding: 10px;
+  margin: 70px 50px;
+  }
+
+.btn-info {
+  position: absolute;
+  right: 18px;
+  bottom: 18px;
+
+}
+
+.heart-icon {
+  position: absolute;
+  top: 285px;
+  right: 24px;
+  font-size: 22px;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.5;
+  }
+}
+
+.infos-name {
+  background-color: #f3f1f1 ;
+  width: 100%;
+  height: 150%;
+  border-radius: 6px;
+  padding: 15px;
+
+}
+
+.infos-name h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  color: #4d4d4d;
+  font-weight: bold;
+  align-text: center;
+
+}
+.infos-name h3 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  color: #4d4d4d;
+  font-weight: lighter;
+  opacity: 0.7;
+
+}
+.infos-name h4 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: #4d4d4d;
+  font-weight: lighter;
+  opacity: 0.7;
+}
+.infos-name p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  color: #4d4d4d;
+  font-weight: lighter;
+
+}
+
+.application ul {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+
+}
+
+.application ul li {
+  display: inline;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  color: #4d4d4d;
+  opacity: 0.7;
+}
+
+
+.description {
+  margin: 50px 10px;
+  text-align: justify;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: lighter;
+
+}
+
+.show-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position:relative;
+  margin: 100px, 12%;
+}
+
+.btn-back {
+  width: 57%;
+  margin-bottom: 100px;
+
+}
+
+}
+
+
+
+
