--- a/app/assets/stylesheets/components/_product_card.scss
+++ b/app/assets/stylesheets/components/_product_card.scss
@@ -20,34 +20,46 @@
 
 }
 
-.card-product h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-  padding-rigth: 15px;
-  font-family: "Roboto", sans-serif;
-  color: #4d4d4d;
-}
+// // .card-product h2 {
+// //   font-size: 15px;
+// //   font-weight: bold;
+// //   margin: 0;
+// //   padding-rigth: 15px;
+// //   font-family: "Roboto", sans-serif;
+// //   color: #4d4d4d;
+// }
 
-.card-product h4 {
-  font-size: 14px;
-  font-weight: ligther;
-  margin: 0;
-  padding-rigth: 15px;
-  font-family: "Roboto", sans-serif;
-  color: #4d4d4d;
-}
+// .card-product h4 {
+//   font-size: 14px;
+//   font-weight: ligther;
+//   margin: 0;
+//   padding-rigth: 15px;
+//   font-family: "Roboto", sans-serif;
+//   color: #4d4d4d;
+//   font-weight: ligther;
+//   opacity: 0.7;
+// }
 
-.card-product p {
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
-}
+// .card-product h5 {
+//   font-size: 13px;
+//   font-weight: ligther;
+//   margin: 0;
+//   padding-rigth: 15px;
+//   font-family: "Roboto", sans-serif;
+//   color: #4d4d4d;
+//   font-weight: ligther;
+//   opacity: 0.7;
+// }
+// .card-product p {
+//   font-size: 12px;
+//   line-height: 1.4;
+//   opacity: .7;
+//   margin-bottom: 0;
+//   margin-top: 8px;
+// }
 
 .card-product .card_product_infos {
-  padding: 16px;
+  padding-left: 15px;
 }
 
 .card-link {
