--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="row equal d-flex justify-content-center overflow-auto">
 
-  <div class="col-xs-8 col-sm-4">
+  <div class="col-sm-12 col-md-12 col-lg-4">
 
     <div class="favorites">
       <i class="fas fa-heart color-far icon-heart" id="icon-heart-fav"></i>
@@ -52,7 +52,7 @@
     </div>
   </div>
 
-  <div class="col-xs-8 col-sm-4">
+  <div class="col-sm-12 col-md-12 col-lg-4">
 
     <div class="favorites">
       <i class="fas fa-bell icon-bell" id="icon-bell-alerts"></i>
@@ -116,7 +116,7 @@
     </div>
   </div>
 
-  <div class="col-xs-8 col-sm-4">
+  <div class="col-sm-12 col-md-12 col-lg-4">
 
     <div class="personal-info">
       <i class="far fa-user" id="user-icon"></i>
