--- a/app/assets/stylesheets/pages/_scholarship_index.scss
+++ b/app/assets/stylesheets/pages/_scholarship_index.scss
@@ -13,11 +13,52 @@
   font-size: 25px;
   font-weight: bold;
   color: #4d4d4d;
-  margin-left: 40px;
+  margin-left: 35px;
   padding-top: 10px;
 }
 
-@include media-breakpoint-up(md) {
+.card-product h2 {
+  font-size: 11px;
+  font-weight: bold;
+  margin: 0;
+  margin-rigth: 25px;
+  padding-right: 25px;
+  font-family: "Roboto", sans-serif;
+  color: #4d4d4d;
+}
+
+.card-product h4 {
+  font-size: 10px;
+  font-weight: ligther;
+  margin: 0;
+  padding-rigth: 20px;
+  font-family: "Roboto", sans-serif;
+  color: #4d4d4d;
+  font-weight: ligther;
+  opacity: 0.7;
+}
+
+.card-product h5 {
+  font-size: 9px;
+  font-weight: ligther;
+  margin: 0;
+  padding-rigth: 20px;
+  font-family: "Roboto", sans-serif;
+  color: #4d4d4d;
+  font-weight: ligther;
+  opacity: 0.7;
+}
+.card-product p {
+  font-size: 8px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+  margin-right: 20px;
+  padding-right: 20px;
+}
+
+@include media-breakpoint-up(sm) {
   .index-page {
     margin: 150px 12%;
     background: #e7e4e4;
@@ -25,6 +66,46 @@
     padding: 20px;
     position: relative;
   }
+
+  .card-product h2 {
+  font-size: 15px;
+  font-weight: bold;
+  margin: 0;
+  padding-rigth: 15px;
+  margin-right: 15px;
+  font-family: "Roboto", sans-serif;
+  color: #4d4d4d;
+}
+
+.card-product h4 {
+  font-size: 14px;
+  font-weight: ligther;
+  margin: 0;
+  padding-rigth: 15px;
+  font-family: "Roboto", sans-serif;
+  color: #4d4d4d;
+  font-weight: ligther;
+  opacity: 0.7;
+}
+
+.card-product h5 {
+  font-size: 13px;
+  font-weight: ligther;
+  margin: 0;
+  padding-rigth: 15px;
+  font-family: "Roboto", sans-serif;
+  color: #4d4d4d;
+  font-weight: ligther;
+  opacity: 0.7;
+}
+.card-product p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
 
   .index-page h1 {
     font-family: "Roboto", sans-serif;
@@ -49,5 +130,76 @@
 .row {
   margin-top: 50px;
 }
+
+// @include media-breakpoint-up(sm) {
+//   .index-page {
+//     margin: 150px 12%;
+//     background: #e7e4e4;
+//     border-radius: 6px;
+//     padding: 20px;
+//     position: relative;
+//   }
+
+//   .card-product h2 {
+//   font-size: 15px;
+//   font-weight: bold;
+//   margin: 0;
+//   padding-rigth: 15px;
+//   font-family: "Roboto", sans-serif;
+//   color: #4d4d4d;
+// }
+
+// .card-product h4 {
+//   font-size: 14px;
+//   font-weight: ligther;
+//   margin: 0;
+//   padding-rigth: 15px;
+//   font-family: "Roboto", sans-serif;
+//   color: #4d4d4d;
+//   font-weight: ligther;
+//   opacity: 0.7;
+// }
+
+// .card-product h5 {
+//   font-size: 13px;
+//   font-weight: ligther;
+//   margin: 0;
+//   padding-rigth: 15px;
+//   font-family: "Roboto", sans-serif;
+//   color: #4d4d4d;
+//   font-weight: ligther;
+//   opacity: 0.7;
+// }
+// .card-product p {
+//   font-size: 12px;
+//   line-height: 1.4;
+//   opacity: .7;
+//   margin-bottom: 0;
+//   margin-top: 8px;
+// }
+
+//   .index-page h1 {
+//     font-family: "Roboto", sans-serif;
+//     font-size: 32px;
+//     font-weight: bold;
+//     color: #4d4d4d;
+//     margin-left: 100px;
+//     margin-top: 20px;
+//   }
+// }
+
+// .index-page h6 {
+//   font-family: "Roboto", sans-serif;
+//   font-size: 20px;
+//   font-weight: lighter;
+//   color: #4d4d4d;
+//   margin-left: 150px;
+//   margin-top: 10px;
+
+// }
+
+// .row {
+//   margin-top: 50px;
+// }
 
 
