--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -97,7 +97,7 @@
 
 
 <div class="slideshow-container row row-no-mb">
-  <div class="mySlides col-sm-12">
+  <div class="mySlides col-sm-12 col-md-12 col-lg-12">
     <a href="#areas">
     <h5>
       <i class="fas fa-chevron-down icon-arrow icon-slide"></i>
