--- a/app/views/scholarships/show.html.erb
+++ b/app/views/scholarships/show.html.erb
@@ -1,61 +1,64 @@
 
 
+<div class="row ">
+  <div class="col-sm-12 col-md-12 col-lg-12">
+    <div class="show-card">
+      <div class="content-background">
 
-<div class="show-card">
-  <div class="content-background">
-
-    <div class="institution-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%=cl_image_path @scholarship.institution.photo %>')">
-      <h1>The perfect scholarship for you</h1>
-    </div>
-
-    <%#= image_tag @scholarship.institution.photo_url %>
-
-    <div class="show-card-text">
-
-      <div class="infos-name">
-        <h2><%= @scholarship.name %></h2>
-        <h3><%= @scholarship.institution.name %></h3>
-        <h4><%= @scholarship.institution.country %></h4>
-        <h4><%= @scholarship.area.name %></h4>
-
-        <div class="application">
-          <ul>
-            <li><i class="far fa-calendar-alt"></i></li>
-            <li>Application: <%= @scholarship.application_start_date %> / <%= @scholarship.application_end_date %></li>
-          </ul>
+        <div class="institution-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%=cl_image_path @scholarship.institution.photo %>')">
+          <h1>The perfect scholarship for you</h1>
         </div>
 
+        <%#= image_tag @scholarship.institution.photo_url %>
+
+        <div class="show-card-text">
+
+          <div class="infos-name">
+            <h2><%= @scholarship.name %></h2>
+            <h3><%= @scholarship.institution.name %></h3>
+            <h4><%= @scholarship.institution.country %></h4>
+            <h4><%= @scholarship.area.name %></h4>
+
+            <div class="application">
+              <ul>
+                <li><i class="far fa-calendar-alt"></i></li>
+                <li>Application: <%= @scholarship.application_start_date %> / <%= @scholarship.application_end_date %></li>
+              </ul>
+            </div>
+
+          </div>
+
+          <div class="description">
+
+            <p><%= @scholarship.description %></p>
+
+          </div>
+
+        </div>
+
+        <div class="btn-info">
+        <%= link_to "More information", @scholarship.url, class: 'btn btn-warning', target: :_blank %>
+        </div>
+
+
+
+        <div id='<%= @scholarship.id %>' class="heart-icon" >
+          <% if user_signed_in? %>
+            <%= icon(current_user.likes?(@scholarship) ? "fas color-fas heart-fas" : "far color-far heart-fav" , "heart") %>
+          <% else %>
+           <%= link_to new_user_session_path, alert: "You need to Login to continue :)" do %>
+              <i class="far fa-heart color-far"></i>
+            <% end %>
+          <% end %>
+        </div>
       </div>
 
-      <div class="description">
-
-        <p><%= @scholarship.description %></p>
-
+      <div class="btn-back">
+          <%= link_to "Back to Scholarships", scholarships_path, class: 'btn btn-outline-warning'%>
       </div>
 
     </div>
-
-    <div class="btn-info">
-    <%= link_to "More information", @scholarship.url, class: 'btn btn-warning', target: :_blank %>
-    </div>
-
-
-
-    <div id='<%= @scholarship.id %>' class="heart-icon" >
-      <% if user_signed_in? %>
-        <%= icon(current_user.likes?(@scholarship) ? "fas color-fas heart-fas" : "far color-far heart-fav" , "heart") %>
-      <% else %>
-       <%= link_to new_user_session_path, alert: "You need to Login to continue :)" do %>
-          <i class="far fa-heart color-far"></i>
-        <% end %>
-      <% end %>
-    </div>
   </div>
-
-  <div class="btn-back">
-      <%= link_to "Back to Scholarships", scholarships_path, class: 'btn btn-outline-warning'%>
-  </div>
-
 </div>
 
 
