changed reference of logo image used on the email template

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -211,8 +211,8 @@
               <tr>
                 <td valign="top" class="mobile-block mobile-no-padding-bottom mobile-center" width="270" style="padding:20px 10px 20px 20px;">
                   <a href="#" style="text-decoration:none;">
-                  <%= cl_image_tag("logo_funder.png", :height => 70) %>
-                  <!--  <img src="<%#= image_url('logo_funder.png') %>" height="20" alt="Funder Logo"/> -->
+                  <%#= cl_image_tag("logo_funder.png", :height => 70) %>
+                  <img src="<%= image_url('LogoFunder.png') %>" height="70" alt="Funder Logo"/>
                   </a>
                 </td>
               </tr>
