fixed navbar on top and recover the hiding and appearing at 100vh

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 
-<div class="all-navbar">
+<div class="all-navbar fixed-top">
   <div class="<%= navbar_classes %>">
       <%= link_to root_path, class: "navbar-brand" do %>
         <%= image_tag "https://res.cloudinary.com/ddec9kvgc/image/upload/v1567530182/logo_funder/logo_funder_badge_b7pgdp.png" %>
