fixed marging top on scholarship show page, adjusted font on profile cards and adjusted banner logo for mobile

--- a/app/assets/stylesheets/components/_institution_card.scss
+++ b/app/assets/stylesheets/components/_institution_card.scss
@@ -32,11 +32,12 @@
   height: 150%;
   border-radius: 6px;
   align-items: center;
-  margin: 75px 6%;
+  margin: 75px 2%;
   margin-bottom: 30px;
   object-fit: cover;
   position: relative;
-  margin-top: 100px;
+  margin-top: 30px;
+  margin-bottom: 30px
 
 }
 
@@ -179,11 +180,11 @@
   height: 150%;
   border-radius: 6px;
   align-items: center;
-  margin: 75px 8%;
+  margin: 50px 8%;
   margin-bottom: 30px;
   object-fit: cover;
   position: relative;
-  margin-top: 100px;
+  margin-top: 75px;
 
 }
 .show-card-text {
