--- a/app/assets/stylesheets/pages/_scholarship_index.scss
+++ b/app/assets/stylesheets/pages/_scholarship_index.scss
@@ -58,6 +58,10 @@
   padding-right: 20px;
 }
 
+.row {
+  margin-top: 50px;
+}
+
 @include media-breakpoint-up(sm) {
   .index-page {
     margin: 150px 12%;
