--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -23,16 +23,29 @@
   padding: 10px 20px;
   margin-top: 50px;
   margin-bottom: 50px;
-  border-radius: 3px;
+  border-radius: 6px;
   box-shadow: none;
   h2 {
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 30px;
     text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #4d4d4d;
+  }
+
+  input {
+    font-size: 18px;
+    font-weight: lither;
+    margin-bottom: 30px;
+    text-align: center;
+    font-family: "Roboto", sans-serif;
+    color: #4d4d4d;
+
   }
   .btn {
     width: 100%;
-    margin-bottom: 20px
+    margin-bottom: 20px;
+    color: white;
   }
 }
