--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,8 +9,8 @@
       <div class="favorite">
 
 
-        <%current_user.favorites.each do |favorite| %>
-          <% scholarship = Scholarship.find(favorite.favorited_id) %>
+        <%current_user.favorites.map(&:favorited).sort_by(&:application_end_date).each do |scholarship| %>
+          <% favorite = Favorite.where(user: current_user, favorited: scholarship).first %>
           <% if ((Date.today >= scholarship.application_start_date) and (Date.today < scholarship.application_end_date and scholarship.application_end_date - Date.today <= 15)) or ((Date.today <=  scholarship.application_start_date) and (scholarship.application_start_date - Date.today <= 60)) or ((Date.today >= scholarship.application_start_date) and (scholarship.application_end_date - Date.today > 15)) %>
             <div class="card-product-profile card-product-profile-highlight">
           <% elsif Date.today > scholarship.application_end_date %>
