--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -25,7 +25,7 @@
   margin-bottom: 50px;
   border-radius: 6px;
   box-shadow: none;
-  h2 {
+  h3 {
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 30px;
@@ -36,7 +36,7 @@
 
   input {
     font-size: 18px;
-    font-weight: lither;
+    font-weight: lighter;
     margin-bottom: 30px;
     text-align: center;
     font-family: "Roboto", sans-serif;
