--- a/app/views/alerts/_edit.html.erb
+++ b/app/views/alerts/_edit.html.erb
@@ -6,15 +6,16 @@
      <div class="container mb-4">
       <div class="row justify-content-center modal-alert">
 
-          <h2>Edit Alert</h2>
-      <%= simple_form_for alert, method: :patch do |f| %>
-
         <div class="form-inputs">
-          <%= f.input :name %>
-          <%= f.input :description, as: :text %>
-          <%= f.input :area_id, collection: Area.order(:name) %>
-          <%= f.input :institution_id, collection: Institution.order(:name) %>
-          <%= f.submit%>
+
+          <h3>Edit Alert</h3>
+            <%= simple_form_for alert, method: :patch do |f| %>
+
+            <%= f.input :name %>
+            <%= f.input :description, as: :text %>
+            <%= f.input :area_id, collection: Area.order(:name) %>
+            <%= f.input :institution_id, collection: Institution.order(:name) %>
+            <%= f.button :submit, "Update", class: "btn btn-warning"%>
         </div>
       <% end %>
       </div>
